--- a/index.html
+++ b/index.html
@@ -5,15 +5,100 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> basic js </title>
+    <title> basic js/ bank staffs </title>
+    <!-- bootstrap cdn starts -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- bootstrap cdn ends -->
+    <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
 
-    <h1>javascript is awesome. </h1>
+    <div id="login_form">
+        <h3>Welcome to Pioneer Bank</h3>
+        <div class="login">
+            <h2>Login</h2>
+            <input id="login_input" class="form-control mr-bottom" type="email" placeholder="Email">
+            <input type="password" id="input_pass" class="form-control mr-bottom" placeholder="Password">
+            <button id="login_btn" class="btn btn-primary mr-bottom">Enter</button>
+        </div>
+    </div>
+    <!--  transaction area  -->
+    <div class="container" id="transaction_area">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="money_box depositeBg">
+                    <h4>Deposit</h4>
+                    <h2>$ <span id="previous_deposit">00</span></h2>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="money_box withdrawBg">
+                    <h4>Withdraw</h4>
+                    <h2>$ <span id="withdrawH2">00</span></h2>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="money_box balacneBg">
+                    <h4>Balance</h4>
+                    <h2>$ <span id="previous_balance">1200</span> </h2>
+                </div>
+            </div>
+        </div>
+
+        <!--transaction form box area   -->
+        <div class="row">
+            <div class="col-md-6">
+                <div class="money_input_box">
+                    <h2>Deposit</h2>
+                    <input id="deposit_money" class="form-control" type="text"
+                        placeholder="$ money you want to deposit">
+                    <br>
+                    <button id="Deposit" class="btn btn-success"> Deposit </button>
+                </div>
+            </div>
+
+            <div class="col-md-6">
+                <div class="money_input_box">
+                    <h2>Withdraw</h2>
+                    <input id="withdrawInput" class="form-control" type="text"
+                        placeholder="$ money you want to withdraw">
+                    <br>
+                    <button id="withdrawBtn" class="btn btn-success"> Withdraw </button>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- <h1>javascript is awesome. </h1>
     <button id="first_btn"> Click Me 1 </button>
     <button onclick="aFunction()"> Click Me 2 </button>
-    <button id="third_btn"> Click Me 3 </button>
+    <button id="third_btn"> Click Me 3 </button> -->
 
     <script type="text/javascript" src="module19.js">  </script>
 
